--- a/public/dist-front/css/test.css
+++ b/public/dist-front/css/test.css
@@ -502,3 +502,15 @@ input:focus {
 .testdiagnosis-submitbutton:hover {
     background-color: rgb(29, 83, 127);
 }
+
+#loader {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.75) url(loading.gif) no-repeat center center;
+    z-index: 10000;
+}
